[package]
name = "sid-rs"
description = "A platform agnostic driver to interface with the MOS Technology 6581/8580 Sound Interface Device (SID)"
license = "MIT"
categories  = ["embedded", "hardware-support", "no-std"]
homepage = "https://github.com/kiranshila/sid-rs"
repository = "https://github.com/kiranshila/sid-rs"
version = "0.1.0"
authors = ["Kiran Shila <me@kiranshila.com>"]
edition = "2018"

[dependencies]
embedded-hal = "0.2.3"
ux = "0.1.3"

[dev-dependencies]
cortex-m = "0.6.0"
cortex-m-rt = "0.6.8"
stm32f0xx-hal = { version = "0.17.1", features = ["stm32f030x8"]}
panic-probe = "0.2.0"

[profile.dev]
opt-level = 1
debug = true

[profile.release]
lto = true
