[package]
authors = ["Kiran Shila <me@kiranshila.com>"]
categories = ["embedded", "hardware-support", "no-std"]
description = "A platform agnostic driver to interface with the MOS Technology 6581/8580 Sound Interface Device (SID)"
edition = "2018"
homepage = "https://github.com/kiranshila/sid-rs"
license = "MIT"
name = "sid-rs"
repository = "https://github.com/kiranshila/sid-rs"
version = "0.1.0"

[dependencies]
embedded-hal = "0.2.3"
flagset = "0.4.0"
ux = "0.1.3"

[dev-dependencies]
cortex-m = "0.6.0"
cortex-m-rt = "0.6.8"
panic-probe = "0.2.0"

[dev-dependencies.stm32f0xx-hal]
features = ["stm32f030x8"]
version = "0.17.1"

[profile]
[profile.dev]
debug = true
opt-level = 1

[profile.release]
lto = true
